[project]
name = "get-d4h"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.53.0",
    "requests>=2.31.0",
    "notebook>=7.2.1",
    "pandas>=2.2.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "numpy>=1.24.0",
    "folium>=0.14.0",
]

[tool.setuptools]
py-modules = ["main", "data_utils"]
